// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "days": [
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    6400,
  ],
  "totalBlobs": [
    5,
  ],
  "totalUniqueBlobs": [
    3,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "days": [
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    4000,
    6400,
  ],
  "totalBlobs": [
    4,
    5,
  ],
  "totalUniqueBlobs": [
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "days": [
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    4,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "days": [
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    6200,
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    2,
    4,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "days": [
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    393216,
    6200,
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    3,
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    3,
    2,
    4,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 360d 1`] = `
{
  "days": [
    "2022-10-16T00:00:00.000Z",
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    6400,
    393216,
    6200,
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    6,
    3,
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    3,
    3,
    2,
    4,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgBlobAsCalldataFees": [
    5610000,
  ],
  "avgBlobFees": [
    121000000,
  ],
  "avgBlobGasPrices": [
    22,
  ],
  "days": [
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "16830000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "765000",
  ],
  "totalBlobFees": [
    "363000000",
  ],
  "totalBlobGasUsed": [
    "16500000",
  ],
  "totalBlocks": [
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgBlobAsCalldataFees": [
    5000000,
    5610000,
  ],
  "avgBlobFees": [
    100000000,
    121000000,
  ],
  "avgBlobGasPrices": [
    20,
    22,
  ],
  "days": [
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "5000000",
    "16830000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "250000",
    "765000",
  ],
  "totalBlobFees": [
    "100000000",
    "363000000",
  ],
  "totalBlobGasUsed": [
    "5000000",
    "16500000",
  ],
  "totalBlocks": [
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgBlobAsCalldataFees": [
    5610000,
    5000000,
    5610000,
  ],
  "avgBlobFees": [
    121000000,
    100000000,
    121000000,
  ],
  "avgBlobGasPrices": [
    22,
    20,
    22,
  ],
  "days": [
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "5610000",
    "5000000",
    "16830000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "255000",
    "250000",
    "765000",
  ],
  "totalBlobFees": [
    "121000000",
    "100000000",
    "363000000",
  ],
  "totalBlobGasUsed": [
    "5500000",
    "5000000",
    "16500000",
  ],
  "totalBlocks": [
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgBlobAsCalldataFees": [
    5610000,
    5610000,
    5000000,
    5610000,
  ],
  "avgBlobFees": [
    121000000,
    121000000,
    100000000,
    121000000,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    20,
    22,
  ],
  "days": [
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "5610000",
    "5610000",
    "5000000",
    "16830000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "255000",
    "255000",
    "250000",
    "765000",
  ],
  "totalBlobFees": [
    "121000000",
    "121000000",
    "100000000",
    "363000000",
  ],
  "totalBlobGasUsed": [
    "5500000",
    "5500000",
    "5000000",
    "16500000",
  ],
  "totalBlocks": [
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgBlobAsCalldataFees": [
    5610000,
    5610000,
    5610000,
    5000000,
    5610000,
  ],
  "avgBlobFees": [
    121000000,
    121000000,
    121000000,
    100000000,
    121000000,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    22,
    20,
    22,
  ],
  "days": [
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "5610000",
    "5610000",
    "5610000",
    "5000000",
    "16830000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "255000",
    "255000",
    "255000",
    "250000",
    "765000",
  ],
  "totalBlobFees": [
    "121000000",
    "121000000",
    "121000000",
    "100000000",
    "363000000",
  ],
  "totalBlobGasUsed": [
    "5500000",
    "5500000",
    "5500000",
    "5000000",
    "16500000",
  ],
  "totalBlocks": [
    1,
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 360d 1`] = `
{
  "avgBlobAsCalldataFees": [
    44941160,
    5610000,
    5610000,
    5610000,
    5000000,
    5610000,
  ],
  "avgBlobFees": [
    17301504,
    121000000,
    121000000,
    121000000,
    100000000,
    121000000,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    22,
    22,
    20,
    22,
  ],
  "days": [
    "2022-10-16T00:00:00.000Z",
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "44941160",
    "5610000",
    "5610000",
    "5610000",
    "5000000",
    "16830000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "2042780",
    "255000",
    "255000",
    "255000",
    "250000",
    "765000",
  ],
  "totalBlobFees": [
    "17301504",
    "121000000",
    "121000000",
    "121000000",
    "100000000",
    "363000000",
  ],
  "totalBlobGasUsed": [
    "786432",
    "5500000",
    "5500000",
    "5500000",
    "5000000",
    "16500000",
  ],
  "totalBlocks": [
    1,
    1,
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
  ],
  "days": [
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    3,
  ],
  "totalUniqueReceivers": [
    2,
  ],
  "totalUniqueSenders": [
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
  ],
  "days": [
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    2,
  ],
  "totalUniqueSenders": [
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
  ],
  "days": [
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
  ],
  "days": [
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 360d 1`] = `
{
  "avgMaxBlobGasFees": [
    110,
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    "2022-10-16T00:00:00.000Z",
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    3,
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    3,
    1,
    1,
    5,
    2,
    3,
  ],
}
`;
